Fix gap under heading underline in `_includes/contacts-tan.html`.

--- a/assets/scss/4-pages/index/_home.scss
+++ b/assets/scss/4-pages/index/_home.scss
@@ -11,4 +11,5 @@
   background-image: url(/assets/img/heading-bg-underline-tan.png);
   background-repeat: no-repeat;
   background-position: 0 50px;
+  bottom: -20px;
 }
